[tool.poetry]
name = "fitappproject"
version = "0.1.0"
description = "For Agata's and Tomasz' morning routines"
authors = ["Agata Tekien <tekienagata@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
